# basebits

./: Cargo.toml  README.md
benches/: bench_basebits.rs  my_benchmark.rs
ex/: ex1.rs
examples/: ex1.rs
src/: lib.rs
